static/css/global/src/ui-kit-page.scss
body {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
}

.flex-wrap {
  display: flex;
  flex-wrap: wrap;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-family: 'Ubuntu', sans-serif;
  margin: 10px;
}

.card .showcase {
  display: flex;
  flex-wrap: wrap;
}

.showcase.vertical {
  flex-direction: column;
}

.card > h1 {
  font-size: 1.5rem;
  font-weight: 400;
  margin: 0 0 1em 0;
}

#buttons {
  width: 25rem;
}

#buttons .btn {
  margin: 5px;
}

#buttons .btn img {
  width: 24px;
  height: 24px;
}

#buttons .badge {
  height: 24px;
}

#txts {
  width: 25rem;
}

#txts :not(.text-field-wrapper) > .text-field {
  width: 100%;
  margin: 5px 0;
}

#txts .form-field .text-field-wrapper,
#txts .form-field label {
  width: 45%;
}

#txts .half {
  justify-content: space-between;
}

#txts .half .text-field {
  width: 48%;
}

#txts textarea {
  width: 24rem;
}

#radios div[role="group"] {
  width: 100%;
  display: flex;
}

#radios .radio {
  margin: 8px;
}

#radios .with-labels:not(.flex-wrap) {
  flex-direction: column;
}

#radios .with-labels label {
  display: flex;
  align-items: center;
}

#radios .with-labels .radio {
  margin-right: 12px;
}

#radios #blue > input + .icon {
  background: rgba(0, 0, 255, 1);
  border-color: rgba(0, 0, 255, 1);

  --r: 0;
  --g: 0;
  --b: 255;
}

#radios #red > input + .icon {
  background: rgba(255, 0, 0, 1);
  border-color: rgba(255, 0, 0, 1);

  --r: 255;
  --g: 0;
  --b: 0;
}

#radios #green > input + .icon {
  background: rgba(0, 255, 0, 1);
  border-color: rgba(0, 255, 0, 1);

  --r: 0;
  --g: 255;
  --b: 0;
}

#radios #white > input:checked + .icon {
  background: #fff;
  border-color: #999;

  --r: 153;
  --g: 153;
  --b: 153;
}

#radios #white > input:checked + .icon::before {
  background: #999;
}

#checkboxes div[role="group"] {
  width: 100%;
  display: flex;
}

#checkboxes .checkbox {
  margin: 8px;
}

#checkboxes .with-labels:not(.flex-wrap) {
  flex-direction: column;
}

#checkboxes .with-labels label {
  display: flex;
  align-items: center;
}

#checkboxes .with-labels .checkbox {
  margin-right: 12px;
}

#checkboxes #blue-chk > input + .icon {
  background: rgba(0, 0, 255, 1);
  border-color: rgba(0, 0, 255, 1);

  --r: 0;
  --g: 0;
  --b: 255;
}

#checkboxes #red-chk > input + .icon {
  background: rgba(255, 0, 0, 1);
  border-color: rgba(255, 0, 0, 1);

  --r: 255;
  --g: 0;
  --b: 0;
}

#checkboxes #white-chk > input + .icon {
  background: #fff;
  border-color: #999;

  --r: 153;
  --g: 153;
  --b: 153;
}

#checkboxes #white-chk > input + .icon::before {
  border-color: #999;
}

#switches label {
  margin: 4px;
  display: flex;
  align-items: center;
}

#switches #with-prefix .switch {
  margin-left: 1em;
}

#chips {
  width: 18rem;
}

#chips .chip {
  margin: 5px;
}

hr {
  width: 100%;
  margin: 1em 0;
}

#dialogs .dialog {
  width: 20em;
  margin: .5em 0;
}

#carousels .carousel {
  width: 25em;
}

#carousels .slides {
  --r: 186;
  --g: 3;
  --b: 3;
}

#carousels .curr-slide {
  background: #fff1f1;
}

#labeled-elements .labeled {
  margin: 10px;
}

#cards .card.with-image {
  width: 20em;
}

#cards .card.with-image .image {
  background-color: #fff1f1;
}

#dots .row {
  display: flex;
  align-items: center;
  margin: .2em 0;
}

#choice-btns .showcase {
  display: flex;
  flex-direction: column;
}

#choice-btns .choice-btn {
  margin: .5em;
}

#autocomplete .autocomplete-field {
  max-width: 30em;
}

body > .card {
  overflow: visible;
}

